file(GLOB execfiles [a-zA-Z]*.cpp)
foreach(target ${execfiles})
    get_Filename_component(execname ${target} NAME_WE)
    get_Filename_component(srcfile ${target} NAME)
    add_executable(${execname} ${srcfile})
    target_link_libraries(${execname} ${HDF5_LIBRARIES} ${HDF5_CXX_LIBRARIES})
    target_include_directories(${execname} PUBLIC ${HDF5_INCLUDE_DIRS})
endforeach()
